<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ProgressBar
        android:id="@+id/progresbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:lineSpacingMultiplier="1.36"
            android:text="@string/name" />

        <RelativeLayout
            android:id="@+id/rlName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edttext"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:lineSpacingMultiplier="1.36"
            android:text="@string/email" />

        <RelativeLayout
            android:id="@+id/rlEmailHp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edttext"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:lineSpacingMultiplier="1.36"
            android:text="@string/password" />

        <RelativeLayout
            android:id="@+id/rlPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.example.intermediate.customView.CustomEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/custom_edttext"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="42dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:paddingEnd="17dp"
                android:paddingBottom="10dp"
                android:src="@drawable/ic_hide_password"
                android:tag="hidden" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textAllCaps="false"
            android:layout_marginTop="34dp"
            android:text="@string/register" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginStart="10dp"
                android:textColor="@color/purple_700"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>