<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.story.CreateStoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/view_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/app_name"
                app:srcCompat = "@drawable/ic_launcher_background"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp">

                <Button
                    android:id="@+id/btn_camera_x"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_image"
                    android:textAllCaps="false"
                    android:scaleType="fitCenter"
                    android:layout_marginEnd="10dp"
                    android:elevation="2dp"
                    android:padding="16dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_camera_x"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/et_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:padding="20dp"
                android:textAllCaps="false"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="48dp" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>